# lesson_19_2

./: .env.sample  README.md  groups.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  catalog_data.json  forms.py  models.py  services.py  urls.py  views.py
catalog/management/: settings.py
catalog/management/commands/: load_data.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_version.py  0005_product_owner.py  0006_alter_product_options.py  0007_alter_product_options_product_is_published.py
catalog/templates/catalog/: base.html  category_detail.html  category_list.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: password_reset.html
users/templates/users/: login.html  user_form.html
