[tool.poetry]
name = "lesson-19-2"
version = "0.1.0"
description = ""
authors = ["Aleksey <oszn2011@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
ipython = "^8.26.0"
pytils = "^0.4.1"
django = "4.2.2"
usersconfig = "^0.1.9"
redis = "^5.0.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
